--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                     <li><button onclick="exercise()" id="go"> GO! </button></li>
                     <li><button onclick="undo()" id="undo"> undo </button></li>
                     <li><button onclick="redo()" id="redo"> redo </button></li>
-                    <li><button onclick="save()" id="redo"> save </button></li>
+                    <li><button onclick="save()"> save </button></li>
+                    <li><button onclick="teach()"> help </button></li>
                 </div>
                 <div id="exercising">
                     <li><button onclick="farther()" id="father"> Far! </button></li>
@@ -423,6 +424,8 @@
     <script src="assets/js/exercise.js"></script>
     <script src="assets/js/process.js"></script>
     <script src="https://cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.js"></script>
+    <script src="assets/js/events.js"></script>
+    <script src="assets/js/help.js"></script>
 
 </body>
 
