--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
     <div id="dialog" style="display:none" onclick="next()"></div>
     <div id="dialog_musk" style="display:none" onclick="next()"><img src=""></div>
 
+    <!-- 用于在对话框出现前遮挡背景 -->
+    <div id="musk" style="display:none"></div>
+
     <div id="day">
         <h1></h1>
         <p></p>
