--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
         <p style="text-align:center; color:#FFFFFF; margin-top: 50px;"> copyright(c) 2015-2022 Yuba Technology.
             <br>本游戏纯属虚构，并且不针对任何存在的人、组织、团体或事物。游戏内容并非发生在本世界并且与本世界无关，如有雷同纯属巧合。 </p>
+        <p style="text-align:center; color:#FFFFFF;" id="process"></p>
         <!-- <h1 id="loading_text" style="color:#FFFFFF" align="center">Now Loading ...</h1> -->
 
         <script>
