添加了心情判定以及游戏结束

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                     <li><button onclick="redo()" id="redo"> redo </button></li>
                     <li><button onclick="save()"> save </button></li>
                     <li><button onclick="teach()"> help </button></li>
+                    <li><button onclick="operate()"> function </button></li>
                 </div>
                 <div id="exercising">
                     <li><button onclick="farther()" id="father"> Far! </button></li>
