--- a/index.html
+++ b/index.html
@@ -189,20 +189,20 @@
         <center>
             <ul>
                 <div id="exercise_line_edit">
-                    <li><button onclick="editPath()" id="edit"> EDIT </button></li>
-                    <li><button onclick="editDone()" id="edit_done"> OK </button></li>
-                    <li><button onclick="exercise()" id="go"> GO! </button></li>
-                    <li><button onclick="undo()" id="undo"> undo </button></li>
-                    <li><button onclick="redo()" id="redo"> redo </button></li>
-                    <li><button onclick="save()"> save </button></li>
-                    <li><button onclick="teach()"> help </button></li>
-                    <li><button onclick="operate()"> function </button></li>
+                    <li><button onclick="editPath()" id="edit" title="编辑路径"> EDIT </button></li>
+                    <li><button onclick="editDone()" id="edit_done" title="编辑完成"> OK </button></li>
+                    <li><button onclick="exercise()" id="go" title="开始跑操"> GO! </button></li>
+                    <li><button onclick="undo()" id="undo" title="撤销"> undo </button></li>
+                    <li><button onclick="redo()" id="redo" title="重做"> redo </button></li>
+                    <li><button onclick="save()" title="保存存档至本地"> save </button></li>
+                    <li><button onclick="teach()" title="召唤小秘书"> help </button></li>
+                    <li><button onclick="operate()" title="空投手谕"> function </button></li>
                 </div>
                 <div id="exercising">
-                    <li><button onclick="farther()" id="father"> Far! </button></li>
-                    <li><button onclick="closer()" id="closer"> Close! </button></li>
-                    <li><button onclick="faster()"> Faster!</button></li>
-                    <li><button onclick="slower()"> Slower! </button></li>
+                    <li><button onclick="farther()" id="father" title="班与班之间的间隔大一点！"> Far! </button></li>
+                    <li><button onclick="closer()" id="closer" title="紧凑一点！"> Close! </button></li>
+                    <li><button onclick="faster()" title="跑快一点！"> Faster!</button></li>
+                    <li><button onclick="slower()" title="都慢一点！"> Slower! </button></li>
                 </div>
             </ul>
         </center>
