添加了退出提醒以及自动存档

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                     <li><button onclick="exercise()" id="go" title="开始跑操"> GO! </button></li>
                     <li><button onclick="undo()" id="undo" title="撤销"> undo </button></li>
                     <li><button onclick="redo()" id="redo" title="重做"> redo </button></li>
-                    <li><button onclick="save()" title="保存存档至本地"> save </button></li>
-                    <li><button onclick="teach()" title="召唤小秘书"> help </button></li>
+                    <li><button onclick="save('json')" title="保存存档至本地"> save </button></li>
+                    <li><button onclick="teach()" title="召唤秘书"> help </button></li>
                     <li><button onclick="operate()" title="空投手谕"> function </button></li>
                 </div>
                 <div id="exercising">
