--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>雾城</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/css/main.css">
 </head>
 
 <body>
@@ -287,7 +287,7 @@
         <g id="图层_1_2_">
             <g id="图层_1_1_">
                 <g id="cloud">
-                    <!-- <image style="display:inline;overflow:visible;" xlink:href="assets/images/cloud.png"></image> -->
+                    <!-- <image style="display:inline;overflow:visible;" xlink:href="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/images/cloud.png"></image> -->
                 </g>
                 <g id="playground1">
                     <rect x="410.4" y="41.4" class="st0" width="255.4" height="537.8" />
@@ -424,13 +424,13 @@
     </svg>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-    <script src="assets/js/settings.js"></script>
-    <script src="assets/js/loading.js"></script>
-    <script src="assets/js/exercise.js"></script>
-    <script src="assets/js/process.js"></script>
+    <script src="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/js/settings.js"></script>
+    <script src="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/js/loading.js"></script>
+    <script src="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/js/exercise.js"></script>
+    <script src="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/js/process.js"></script>
     <script src="https://cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.js"></script>
-    <script src="assets/js/events.js"></script>
-    <script src="assets/js/help.js"></script>
+    <script src="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/js/events.js"></script>
+    <script src="https://gcore.jsdelivr.net/gh/YubaC/fg@latest/assets/js/help.js"></script>
 
 </body>
 
