添加了重命名的功能

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
                     <li><button onclick="operate()" title="空投手谕"> 操作 </button></li>
                     <li><button onclick="updateList()" title="提交到排行榜"> 提交到排行榜 </button></li>
                     <li><button onclick="showList()" title="查看排行榜"> 查看排行榜 </button></li>
+                    <li><button onclick="renameSchool()" title="重命名学校"> 重命名学校 </button></li>
                 </div>
                 <div id="exercising">
                     <li><button onclick="farther()" id="father" title="班与班之间的间隔大一点！"> 班与班之间的间隔大一点！ </button></li>
