添加了参观模式

--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
                     <li><button onclick="exercise()" id="go" title="开始跑操"> 开跑! </button></li>
                     <li><button onclick="undo()" id="undo" title="撤销"> 撤销 </button></li>
                     <li><button onclick="redo()" id="redo" title="重做"> 重做 </button></li>
-                    <li><button onclick="save('json')" title="保存存档至本地"> 保存 </button></li>
+                    <li><button onclick="save('json')" id="saveBtn" title="保存存档至本地"> 保存 </button></li>
                     <li><button onclick="teach()" title="召唤秘书"> 召唤秘书 </button></li>
                     <li><button onclick="operate()" title="空投手谕"> 操作 </button></li>
-                    <li><button onclick="updateList()" title="提交到排行榜"> 提交到排行榜 </button></li>
+                    <li><button onclick="updateList()" id="rankingListBtn" title="提交到排行榜"> 提交到排行榜 </button></li>
                     <li><button onclick="showList()" title="查看排行榜"> 查看排行榜 </button></li>
-                    <li><button onclick="renameSchool()" title="重命名学校"> 重命名学校 </button></li>
+                    <li><button onclick="renameSchool()" id="renameBtn" title="重命名学校"> 重命名学校 </button></li>
                 </div>
                 <div id="exercising">
                     <li><button onclick="farther()" id="father" title="班与班之间的间隔大一点！"> 班与班之间的间隔大一点！ </button></li>
