Feat(Choice): 使用新的选项栏样式

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>雾城</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/dialog.css">
 </head>
 
 <body>
     <div id="loading_musk">
         <?xml version="1.0" encoding="utf-8"?>
         <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg width="400px" version="1.1" id="loading_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 534.1" style="enable-background:new 0 0 500 534.1;" xml:space="preserve">
+        <svg width="400px" version="1.1" id="loading_svg" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 534.1"
+            style="enable-background:new 0 0 500 534.1;" xml:space="preserve">
             <style type="text/css">
                 .s0 {
                     fill: none;
@@ -164,7 +167,8 @@
         </svg>
 
         <p style="text-align:center; color:#FFFFFF; margin-top: 50px;"> copyright(c) 2015-2023 Yuba Technology.
-            <br>本游戏纯属虚构，并且不针对任何存在的人、组织、团体或事物。游戏内容并非发生在本世界并且与本世界无关，如有雷同纯属巧合。 </p>
+            <br>本游戏纯属虚构，并且不针对任何存在的人、组织、团体或事物。游戏内容并非发生在本世界并且与本世界无关，如有雷同纯属巧合。
+        </p>
         <p style="text-align:center; color:#FFFFFF;" id="process">获取资源列表......</p>
         <p style="text-align:center; color:#FFFFFF;" id="adText">欢迎来到雾城。</p>
         <!-- <h1 id="loading_text" style="color:#FFFFFF" align="center">Now Loading ...</h1> -->
@@ -213,7 +217,9 @@
     </div>
     <!-- <object id="playground" data="playground.svg" width="300px"></object> -->
     <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-    <svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 841.9 595.3" style="enable-background:new 0 0 841.9 595.3; margin-top:50px;" xml:space="preserve">
+    <svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+        y="0px" viewBox="0 0 841.9 595.3" style="enable-background:new 0 0 841.9 595.3; margin-top:50px;"
+        xml:space="preserve">
         <style type="text/css">
             .st0 {
                 fill: #BD8B5D;
